# openapi/profound-control-api.v0.10.0.json
@@ -358,10 +358,6 @@
           "providerOverride": {
             "anyOf": [
               {
-                "enum": [
-                  "bright_data",
-                  "proxidize"
-                ],
                 "type": "string"
               },
               {
@@ -407,10 +403,6 @@
             "$ref": "#/components/schemas/Geography"
           },
           "providerOverride": {
-            "enum": [
-              "bright_data",
-              "proxidize"
-            ],
             "type": "string"
           }
         },
